cluster/apps/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/version: '2.0.1'
  name: tandoor
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: gunicorn
    port: 8080
    protocol: TCP
    targetPort: gunicorn
  selector:
    app.kubernetes.io/name: tandoor
